fixed button and made navbar visible

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,8 @@
 // Specific CSS for your home-page
 .split {
-  top: 0;
-  z-index: 1;
+  bottom: 0;
   width: 50%;
-  height: 100%;
+  height: 89%;
   position: fixed;
   overflow-x: hidden;
   border: 1px solid $black;
